src/objects/VideoUrl__c.object
<CustomObject>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClickThroughURL__c</fullName>
        <label>Click Through URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>YouTubeURLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                    <default>true</default>
                    <label>Video</label>
                </value>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Page Post</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPlaceholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>YouTubeURLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdWords CPM</fullName>
                </value>
                <value>
                    <fullName>DBM RTB</fullName>
                </value>
                <value>
                    <fullName>DBM TrueView</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google Display Network</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Pinterest</fullName>
                </value>
                <value>
                    <fullName>Snapchat</fullName>
                </value>
                <value>
                    <fullName>TrueView</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rotation__c</fullName>
        <label>Rotation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <label>Salesforce_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShouldSyncWithMM__c</fullName>
        <formula>AND(NOT(ISNULL(Contract__r.Sync_with_MM__c)), 
    NOT(Contract__r.PerformMMSync__c))</formula>
        <label>Should Sync With MM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copyName__c</fullName>
        <label>Creative Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copyUrl__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Creative</label>
    <nameField>
        <label>Creative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ContractOrOpportunityRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Contract__c), ISBLANK(Opportunity__c))</errorConditionFormula>
        <errorMessage>Please define Contract or Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FillUrlWhenNotPlaceholder</fullName>
        <active>true</active>
        <errorConditionFormula>!IsPlaceholder__c &amp;&amp; ISBLANK(Url__c) &amp;&amp; !ISPICKVAL(Format__c,&quot;Page Post&quot;)</errorConditionFormula>
        <errorDisplayField>Url__c</errorDisplayField>
        <errorMessage>Non-placeholder URL cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FormatRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(Format__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Format__c</errorDisplayField>
        <errorMessage>Please select Format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IncorrectYTFormat</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
ISPICKVAL(Platform__c,&quot;TrueView&quot;),
ISPICKVAL(Platform__c,&quot;AdWords CPM&quot;)
)
&amp;&amp;
!ISPICKVAL(Format__c,&quot;Video&quot;)</errorConditionFormula>
        <errorMessage>Incorrect format of Creative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvalidYouTubeUrl</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISBLANK(Url__c)), 
  ispickval(Format__c,&quot;Video&quot;),
  NOT(REGEX(Url__c, &apos;(^(http(s)?://)?)(www.)?((youtube.[a-z]+/)|(youtu.be/))[\\S]+&apos;)),
  ISPICKVAL(Format__c,&quot;Video&quot;),
  OR(ISPICKVAL(Platform__c,&quot;AdWords CPM&quot;),
     ISPICKVAL(Platform__c,&quot;TrueView&quot;))
)</errorConditionFormula>
        <errorDisplayField>Url__c</errorDisplayField>
        <errorMessage>Invalid format for YouTube URL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NameCannotContainBlankspacesByHypehen</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(Name,&quot; - &quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name cannot contain blank spaces around hyphens</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlaceholderCannotHaveURL</fullName>
        <active>true</active>
        <errorConditionFormula>IsPlaceholder__c &amp;&amp; !ISBLANK(Url__c)</errorConditionFormula>
        <errorDisplayField>Url__c</errorDisplayField>
        <errorMessage>Placeholder cannot have URL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rotation0to100</fullName>
        <active>true</active>
        <errorConditionFormula>Rotation__c &gt; 1 || Rotation__c &lt; -0.01</errorConditionFormula>
        <errorDisplayField>Rotation__c</errorDisplayField>
        <errorMessage>Rotation is value between -1% and 100% where -1% means &apos;No Rotation&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateNotBiggerThanEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
        <errorMessage>End Date cannot be before Start Date</errorMessage>
    </validationRules>
</CustomObject>